--- a/Toy_Renderer/Toy_Renderer.vcxproj
+++ b/Toy_Renderer/Toy_Renderer.vcxproj
@@ -135,6 +135,13 @@
     <ClCompile Include="..\..\..\..\repos\OPENGl\glad\src\glad.c" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Shader.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="fragmentShader.glsl" />
+    <None Include="vertexShader.glsl" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
