Move camera to its own class

--- a/Toy_Renderer/Toy_Renderer.vcxproj
+++ b/Toy_Renderer/Toy_Renderer.vcxproj
@@ -145,6 +145,7 @@
     <Image Include="textures\container.jpg" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
